# the_last_bluetooth

./: .gitignore  .metadata  README.md  analysis_options.yaml  jnigen.yaml  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/lastgimbus/the/lastbluetooth/: ShitUtils.kt  TheLastBluetoothPlugin.kt  TheLastUtils.kt
android/src/main/kotlin/com/lastgimbus/the/lastbluetooth/the_last_bluetooth/: TheLastBluetoothPlugin.kt
c_src/jnigen/: CMakeLists.txt  the_last_bluetooth.c
example/: README.md  pubspec.yaml
example/android/: .gitignore  build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/lastgimbus/the/lastbluetooth/the_last_bluetooth_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/lastgimbus/the/lastbluetooth_example/: MainActivity.kt
example/lib/: main.dart
example/test/: widget_test.dart
lib/: the_last_bluetooth.dart  the_last_bluetooth_method_channel.dart  the_last_bluetooth_platform_interface.dart
lib/src/: android_bluetooth.g.dart  android_enums.dart  bluetooth_adapter.dart  bluetooth_connection.dart  bluetooth_device.dart  ctrl_bluetooth_device.dart  shit_utils.dart  utils.dart
test/: the_last_bluetooth_method_channel_test.dart  the_last_bluetooth_test.dart
